--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  /* border-left: 1px solid black; */
   /* padding: 10px; */
-  /* outline: none; */
+  outline: none;
 }
 
 .jumbotron {
